--- a/PySpark_labo.ipynb
+++ b/PySpark_labo.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "source": [
     "De data kan ingelezen worden met de functie: `spark.read.csv()`  \n",
-    "*Laad de data kc_house_data.csv in en zet de parameters `inferSchema` en `header` op True*"
+    "*Laad de data `kc_house_data.csv` in en zet de parameters `inferSchema` en `header` op True*"
    ]
   },
   {
