--- a/PySpark_labo.ipynb
+++ b/PySpark_labo.ipynb
@@ -104,7 +104,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,7 +233,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,7 +285,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,6 +322,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Is dit een action of een transformation?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Met de `.count()` methode kan je het aantal gefilterde huizen opvragen.  \n",
     "*Hoeveel huizen bevat `dataset_2000` met minimum 2 slaapkamers en die gelegen zijn aan het waterfront?*"
    ]
@@ -326,6 +346,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Is dit een action of een transformation?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,7 +432,22 @@
    "metadata": {},
    "source": [
     "*Groepeer eerst alle rijen volgens `yr_renovated` en sla dit op als de variabele `grouped`. \n",
-    "Gebruik vervolgens de algemene agg() methode om de maximale prijs te vinden per jaar*"
+    "Gebruik vervolgens de algemene agg() methode om de maximale prijs te vinden per bouwjaar.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  <span style=\"color:hotpink\"> Samenvattende oefening </span>\n",
+    "*Wat is de gemiddelde prijs per bouwjaar van huizen die gerenoveerd zijn na 2005, die minimum 3 slaapkamers hebben, die geviewed zijn en die een grade boven 5 hebben?*"
    ]
   },
   {
@@ -470,7 +519,7 @@
     "\n",
     "Om de data op te delen in train en test data kun je de volgende functie gebruiken:  \n",
     "`train_data,test_data = df.randomSplit([float1,float2])`  \n",
-    "*Splits nu de data op waarbij 80% van de data train data is.*"
+    "*Splits nu de data op waarbij 80% van de data training data is.*"
    ]
   },
   {
@@ -510,7 +559,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Extra oefening: maak zelf een min-max scaler met de geziene functies en pas deze toe op de dataset. Resulteert dit in een betere MSE?*"
+    "### <span style=\"color:hotpink\"> Extra oefening  </span>  \n",
+    "Maak zelf een min-max scaler met de geziene functies en pas deze toe op de dataset. Resulteert dit in een betere MSE?"
    ]
   },
   {
