--- a/PySpark_labo.ipynb
+++ b/PySpark_labo.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "VUL HIER JE NAAM IN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Tijdens dit deel van het labo zal je de PySpark basics leren en hoe ze toe te passen voor machine learning.  \n",
     "De dataset waarmee gewerkt zal worden is data over huizen in king county en op het einde zal je de prijs van een huis proberen te voorspellen aan de hand van lineaire regressie.  \n",
     "De kolommen die aanwezig zijn in de dataset en hun beschrijving zijn:  \n",
@@ -37,12 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import findspark\n",
-    "findspark.init('/home/marie/spark')\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.ml.regression import LinearRegression"
    ]
@@ -98,21 +103,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Wat is het type waarden aanwezig in de kolom sqft_basement?*"
+    "*Wat is het type waarde aanwezig in de kolom sqft_basement?*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Om een spark DataFrame (of spark column) weer te geven moet je de functie `df.show()` aanroepen. Dus telkens een functie een Spark Dataframe returned moet je `.show()` gebruiken om het resultaat te kunnen zien.  \n",
+    "Om een spark DataFrame (of spark column) weer te geven moet je de functie `df.show()` aanroepen.  \n",
+    "Dus telkens een functie een Spark Dataframe returned moet je `.show()` gebruiken om het resultaat te kunnen zien.  \n",
     "*Bekijk nu zelf de data.*"
    ]
   },
@@ -174,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Om de inhoud van de geselecteerde kolom weer te geven moet je de methode `.show` aanroepen."
+    "Om de inhoud van de geselecteerde kolom weer te geven moet je de methode `.show()` aanroepen."
    ]
   },
   {
@@ -203,6 +207,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Is dit een action of transformation?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Je kan met `data.head()` ook een specifieke rij of een bepaalde waarde selecteren met behulp van:  \n",
     "`data.head(n)[row_number][column_number]`  \n",
     "*1) Selecteer de 4de rij*  \n",
@@ -222,20 +238,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Is dit een action of transformation?*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
   },
   {
    "cell_type": "markdown",
@@ -285,9 +287,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -328,9 +328,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -357,9 +355,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -399,7 +395,8 @@
    "source": [
     "Niet alle methoden hebben nood aan een groupby call. In plaats darvan kan je de algemene agg() methode oproepen. \n",
     "Dit kan alle rijen in de dataframe aggregeren in een kolom.  \n",
-    "`df.agg({'column_name':'operation'})` de operation kan mean,min,max,count en sum zijn.\n",
+    "`df.agg({'column_name':'operation'})`  \n",
+    "de operation kan mean,min,max,count en sum zijn.\n",
     "\n",
     "*Gebruik de algemene agg() methode om de gemiddelde prijs te vinden*"
    ]
@@ -416,7 +413,7 @@
    "metadata": {},
    "source": [
     "Deze functie geeft echter een DataFrame terug, wat niet zo handig is bv. als je het gemiddelde nodig hebt om berekeningen uit te voeren. Om enkel het getal terug te krijgen moet je het getal als volgt uit de spark DataFrame halen:  \n",
-    "`[row_number][column_number]`  \n",
+    "`.collect()[row_number][column_number]`  \n",
     "*Zorg ervoor dat de algemene agg() methode het gemiddelde als getal terug geeft.*"
    ]
   },
@@ -425,6 +422,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Is dit een action of transformation?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -455,6 +464,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Leg met je eigen woorden uit wat het is verschil tussen de `agg()` en de `groupBy()` functie?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -559,8 +580,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:hotpink\"> Extra oefening  </span>  \n",
-    "Maak zelf een min-max scaler met de geziene functies en pas deze toe op de dataset. Resulteert dit in een betere MSE?"
+    "## <span style=\"color:hotpink\"> Evalueren algoritme </span>\n",
+    "Om het model te kunnen evalueren moet je de volgende functies gebruiken:  \n",
+    "`results = model.evaluate(test_data)`  \n",
+    "`results.residuals.show()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`residuals` toont het verschil tussen de werkelijke prijs en de voorspelde prijs.  \n",
+    "Je kan ook kijken naar de rootMeanSquaredError of r2:  \n",
+    "`results.rootMeanSquaredError`  \n",
+    "`results.r2`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:hotpink\"> Samenvattende oefening  </span>  \n",
+    "Maak zelf een min-max scaler met de geziene functies en pas deze toe op de dataset.  \n",
+    "Resulteert dit in een betere MSE?"
    ]
   },
   {
